Upgrade: undo buttons
Implemented down arrow buttons to remove points added by mistake and reset buttons to re-show individual cells that were completed by mistake and hidden.

--- a/bin/dis-card.css
+++ b/bin/dis-card.css
@@ -93,6 +93,12 @@ button.rules {
 	font-size: 18px;
 	font-weight: bold;
 }
+button.reset {
+	line-height: 38px;
+	font-size: 38px;
+	font-weight: bold;
+	background-color: lightgray;
+}
 
 /*TEXT STYLINGS*/
 .title1 /*COOPER, BIGGEST, ALTERNATING COLORS*/ {
