Reset buttons white
yeah

--- a/bin/dis-card.css
+++ b/bin/dis-card.css
@@ -100,7 +100,7 @@ button.reset {
 	line-height: 24px;
 	font-size: 24px;
 	font-weight: bold;
-	background-color: lightgray;
+	background-color: white;
 }
 
 /*TEXT STYLINGS*/
